--- a/FormulationEditor/FormulationEditor.WPF/View/MainWindowView.xaml
+++ b/FormulationEditor/FormulationEditor.WPF/View/MainWindowView.xaml
@@ -3,9 +3,16 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:viewModel="clr-namespace:FormulationEditor.WPF.ViewModel"
+        xmlns:view="clr-namespace:FormulationEditor.WPF.View"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Formulation Editor" WindowStartupLocation="CenterScreen" Height="450" Width="800">
+    <Window.Resources>
+        <DataTemplate DataType="{x:Type viewModel:FormulationEditViewModel}">
+            <view:FormulationEditView />
+        </DataTemplate>
+    </Window.Resources>
     <Grid>
-        <Label Content="Formulation Editor" />
+        <ContentControl Content="{Binding FormulationEditViewModel}" />
     </Grid>
 </Window>
