--- a/FormulationEditor/FormulationEditor.WPF/View/FormulationEditView.xaml
+++ b/FormulationEditor/FormulationEditor.WPF/View/FormulationEditView.xaml
@@ -6,6 +6,9 @@
              xmlns:local="clr-namespace:FormulationEditor.WPF.View"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+    <UserControl.Resources>
+        <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
+    </UserControl.Resources>
     <UserControl.Background>
         <SolidColorBrush Color="#C6C6C6" />
     </UserControl.Background>
@@ -41,28 +44,52 @@
             </ListView.ItemTemplate>
         </ListView>
 
+        <Label Grid.Row="1" Grid.Column="1"
+               Content="Select an Ingredient to add to the Formulation" />
+        
         <Grid Grid.Row="2" Grid.Column="1"
               HorizontalAlignment="Stretch"
               VerticalAlignment="Top"
-              Margin="10">
+              Margin="10"
+              Visibility="{Binding IngredientIsSelected, Converter={StaticResource BooleanToVisibilityConverter}}">
             <Grid.RowDefinitions>
                 <RowDefinition />
                 <RowDefinition />
                 <RowDefinition />
                 <RowDefinition />
             </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
 
-            <Label Grid.Row="0" 
-                   Margin="10 0 10 10"
+            <Label Grid.Row="0" Grid.Column="0"
+                   Grid.ColumnSpan="3"
                    Content="{Binding IngredientAddText}" />
 
-            <TextBox Grid.Row="2" 
-                     Margin="10 0 10 10"
+            <TextBox Grid.Row="0" Grid.Column="1"
+                     HorizontalAlignment="Left"
+                     MinWidth="100"
+                     VerticalAlignment="Center"
                      IsEnabled="{Binding IngredientIsSelected}"
                      Text="{Binding FormulationIngredientBusinessModel.Quantity, UpdateSourceTrigger=PropertyChanged}" />
 
-            <Button Grid.Row="3" 
-                    Margin="10 0 10 10"
+            <Label Grid.Row="1" Grid.Column="0"
+                   Content="{Binding MarketPriceLabelText}" />
+
+            <TextBlock Grid.Row="1" Grid.Column="1"
+                       Text="{Binding FormulationIngredientBusinessModel.Price, StringFormat='C'}"
+                       VerticalAlignment="Center" />
+
+            <Label Grid.Row="2" Grid.Column="0"
+                   Content="Total Price" />
+
+            <TextBlock Grid.Row="2" Grid.Column="1"
+                       Text="{Binding FormulationIngredientBusinessModel.TotalPrice, StringFormat='C'}"
+                       VerticalAlignment="Center" />
+
+            <Button Grid.Row="3" Grid.Column="1"
+                    HorizontalAlignment="Left"
                     Content="Add Ingredient"
                     Command="{Binding AddSelectedIngredientCommand}"
                     Height="Auto" 
@@ -84,7 +111,7 @@
                         </Grid.ColumnDefinitions>
 
                         <Label Grid.Column="0" Content="{Binding Name}" />
-                        <TextBox Grid.Column="1" Text="{Binding Quantity}" />
+                        <TextBox Grid.Column="1" Text="{Binding Quantity, UpdateSourceTrigger=PropertyChanged}" />
                     </Grid>
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
