--- a/FormulationEditor/FormulationEditor.WPF/View/FormulationEditView.xaml
+++ b/FormulationEditor/FormulationEditor.WPF/View/FormulationEditView.xaml
@@ -20,14 +20,16 @@
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition MinWidth="200" />
-            <ColumnDefinition />
-            <ColumnDefinition />
+            <ColumnDefinition Width="1.5*" />
+            <ColumnDefinition Width="1.5*" />
         </Grid.ColumnDefinitions>
 
         <DockPanel Grid.Row="0" Grid.Column="0" 
                    LastChildFill="True">
             <Label Content="Formulation Name" MinWidth="75" />
-            <TextBox Text="{Binding FormulationBusinessModel.Name}" MinWidth="125" />
+            <TextBox Text="{Binding FormulationBusinessModel.Name}" 
+                     MinWidth="125"
+                     VerticalAlignment="Center"/>
         </DockPanel>
 
         <Label Grid.Row="1" Grid.Column="0" 
@@ -95,9 +97,27 @@
                     Height="Auto" 
                     Width="Auto" />
         </Grid>
-        
-        <Label Grid.Row="1" Grid.Column="2"
-               Content="Assigned Ingredients" />
+
+        <Grid Grid.Row="1" Grid.Column="2">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+            
+            <Label Grid.Column="0" 
+                   Content="Assigned Ingredients" />
+            
+            <Label Grid.Column="1"
+                   Content="Formulation Total Price"
+                   HorizontalAlignment="Right"
+                   Margin="0 0 10 0" />
+
+            <TextBlock Grid.Column="2"
+                       Text="{Binding FormulationBusinessModel.TotalPrice, StringFormat='C'}"
+                       VerticalAlignment="Center"
+                       HorizontalAlignment="Right" />
+        </Grid>
 
         <ItemsControl Grid.Row="2" Grid.Column="2"
                   Height="Auto"
@@ -107,11 +127,30 @@
                     <Grid>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition />
+                            <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition Width="Auto" />
                             <ColumnDefinition />
                         </Grid.ColumnDefinitions>
 
-                        <Label Grid.Column="0" Content="{Binding Name}" />
-                        <TextBox Grid.Column="1" Text="{Binding Quantity, UpdateSourceTrigger=PropertyChanged}" />
+                        <Label Grid.Column="0" 
+                               Content="{Binding Name}" 
+                               Margin="5" />
+                        
+                        <TextBox Grid.Column="1" 
+                                 Text="{Binding Quantity, UpdateSourceTrigger=PropertyChanged}"
+                                 VerticalAlignment="Center"
+                                 Width="50"
+                                 Margin="5" />
+
+                        <Label Grid.Column="2" 
+                               Content="Tons" 
+                               Width="50"
+                               Margin="5" />
+
+                        <TextBlock Grid.Column="3"
+                                   Text="{Binding TotalPrice, StringFormat='C'}"
+                                   VerticalAlignment="Center"
+                                   HorizontalAlignment="Right" />
                     </Grid>
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
