--- a/FormulationEditor/FormulationEditor.WPF/View/FormulationEditView.xaml
+++ b/FormulationEditor/FormulationEditor.WPF/View/FormulationEditView.xaml
@@ -126,28 +126,36 @@
                 <DataTemplate>
                     <Grid>
                         <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto" />
                             <ColumnDefinition />
                             <ColumnDefinition Width="Auto" />
                             <ColumnDefinition Width="Auto" />
                             <ColumnDefinition />
                         </Grid.ColumnDefinitions>
 
-                        <Label Grid.Column="0" 
+                        <Button Grid.Column="0" 
+                                VerticalAlignment="Center"
+                                Content="X"
+                                Margin="5"
+                                Command="{Binding DataContext.RemoveFormulationIngredientCommand, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}"
+                                CommandParameter="{Binding Id}" />
+
+                        <Label Grid.Column="1" 
                                Content="{Binding Name}" 
                                Margin="5" />
                         
-                        <TextBox Grid.Column="1" 
+                        <TextBox Grid.Column="2" 
                                  Text="{Binding Quantity, UpdateSourceTrigger=PropertyChanged}"
                                  VerticalAlignment="Center"
                                  Width="50"
                                  Margin="5" />
 
-                        <Label Grid.Column="2" 
+                        <Label Grid.Column="3"
                                Content="Tons" 
                                Width="50"
                                Margin="5" />
 
-                        <TextBlock Grid.Column="3"
+                        <TextBlock Grid.Column="4"
                                    Text="{Binding TotalPrice, StringFormat='C'}"
                                    VerticalAlignment="Center"
                                    HorizontalAlignment="Right" />
@@ -155,6 +163,5 @@
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
         </ItemsControl>
-
     </Grid>
 </UserControl>
